--- a/part5/5.6_duplicated.ipynb
+++ b/part5/5.6_duplicated.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f6f670d-404a-4ebf-989b-9b0a052eb60c",
    "metadata": {
     "tags": []
@@ -120,7 +120,7 @@
    ],
    "source": [
     "# 데이터프레임 전체 행 데이터 중에서 중복값 찾기 (기본값, keep='first')\n",
-    "df_dup_first = df.duplicated()\n",
+    "df_dup_first = df.duplicated() # True 나온 값이 윗 셀과 중복된 데이터라는 뜻\n",
     "df_dup_first"
    ]
   },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a55991dd-6178-4903-98f8-08b9479e8568",
    "metadata": {
     "tags": []
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "30414809-2ffc-47f3-8082-18efcb866759",
    "metadata": {
     "tags": []
@@ -210,13 +210,13 @@
    ],
    "source": [
     "# 데이터프레임의 특정 열 데이터에서 중복값 찾기\n",
-    "col_dup = df['c2'].duplicated()\n",
+    "col_dup = df['c2'].duplicated() # 전체에서\n",
     "col_dup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7cab9746-3334-4025-b928-fab5c5e1172d",
    "metadata": {
     "tags": []
@@ -240,7 +240,7 @@
    ],
    "source": [
     "# 데이터프레임의 특정 열 데이터에서 중복값 찾기\n",
-    "col_dup2 = df.duplicated(subset=['c2'])\n",
+    "col_dup2 = df.duplicated(subset=['c2']) # c2 값만 날리겠ㄷ음\n",
     "col_dup2"
    ]
   }
