--- a/part5/5.9_dtype_conversion.ipynb
+++ b/part5/5.9_dtype_conversion.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "66f238f5-ba1f-4db0-9b94-51f5a1e68995",
    "metadata": {
     "tags": []
@@ -147,11 +147,11 @@
    ],
    "source": [
     "# origin 열의 문자열 자료형을 범주형으로 변환\n",
-    "df['origin'] = df['origin'].astype('category')     \n",
+    "df['origin'] = df['origin'].astype('category')  #****************   \n",
     "print(df['origin'].dtypes) \n",
     "\n",
     "# 범주형을 문자열로 다시 변환\n",
-    "df['origin'] = df['origin'].astype('str')     \n",
+    "df['origin'] = df['origin'].astype('str')     #********************\n",
     "print(df['origin'].dtypes)"
    ]
   },
