--- a/part5/5.12_one_hot_encoding.ipynb
+++ b/part5/5.12_one_hot_encoding.ipynb
@@ -2,7 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
+   "id": "6c5636de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in c:\\users\\playdata\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (1.7.2)\n",
+      "Requirement already satisfied: numpy>=1.22.0 in c:\\users\\playdata\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (2.3.3)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in c:\\users\\playdata\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (1.16.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\playdata\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\playdata\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "bb12202f-d4dd-41d5-b8bd-f4c78b69b0f9",
    "metadata": {
     "tags": []
@@ -30,6 +53,9 @@
       " [0]\n",
       " [2]]\n",
       "<class 'numpy.ndarray'>\n",
+      "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+      "\twith 15 stored elements and shape (15, 3)>\n",
+      "  Coords\tValues\n",
       "  (0, 1)\t1.0\n",
       "  (1, 1)\t1.0\n",
       "  (2, 1)\t1.0\n",
@@ -100,13 +126,333 @@
     "print(onehot_fitted)\n",
     "print(type(onehot_fitted))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d694a279",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chevrolet chevelle malibu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693.0</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>buick skylark 320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>plymouth satellite</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>amc rebel sst</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449.0</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ford torino</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement horsepower  weight  acceleration  model year  \\\n",
+       "0  18.0          8         307.0      130.0  3504.0          12.0          70   \n",
+       "1  15.0          8         350.0      165.0  3693.0          11.5          70   \n",
+       "2  18.0          8         318.0      150.0  3436.0          11.0          70   \n",
+       "3  16.0          8         304.0      150.0  3433.0          12.0          70   \n",
+       "4  17.0          8         302.0      140.0  3449.0          10.5          70   \n",
+       "\n",
+       "   origin                       name  \n",
+       "0       1  chevrolet chevelle malibu  \n",
+       "1       1          buick skylark 320  \n",
+       "2       1         plymouth satellite  \n",
+       "3       1              amc rebel sst  \n",
+       "4       1                ford torino  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# read_csv() 함수로 df 생성\n",
+    "df = pd.read_csv('./data/auto-mpg.csv', header=None)\n",
+    "\n",
+    "df.columns = ['mpg','cylinders','displacement','horsepower','weight',\n",
+    "              'acceleration','model year','origin','name'] \n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2ba9b3c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "구간별 데이터 범위 : IntervalIndex([(8.999, 19.0], (19.0, 26.933], (26.933, 46.6]], dtype='interval[float64, right]')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연비를 3개 구간으로 나눠서 새로운 컬럼명으로 추가\n",
+    "# 컬럼명 : 저연비 , 보통 , 고연비\n",
+    "# 연속형(수치형) 데이터 -> 범주형(categoty)\n",
+    "df.mpg\n",
+    "# pd.qcut(df.mpg , q=3 , labels=['저연비','보통','고연비'])\n",
+    "df['mpg_qcut']= pd.qcut(df.mpg , q=3 , labels=['저연비','보통','고연비'])\n",
+    "\n",
+    "size , bins_range = np.histogram(df.mpg , bins=3)\n",
+    "df['mpg_cut']= pd.cut(df.mpg ,bins=bins_range , labels=['저연비','보통','고연비'] )\n",
+    "# (df.mpg_dcut.value_counts()) + (df.mpg_cut.value_counts()) # 사칙연산 O \n",
+    "df.mpg_qcut.value_counts()\n",
+    "df['mpg_qcut'].cat.categories\n",
+    "# 계급 구간을 확인하는 방법 -> 라벨 없이 적용 후 구문을 변수에 넣고 !\n",
+    "temp = pd.qcut(df.mpg , q=3)\n",
+    "print(f'구간별 데이터 범위 : {temp.cat.categories}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "acb5123a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "계급별 구간 : [ 9.         21.53333333 34.06666667 46.6       ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "size , bins_range = np.histogram(df.mpg , bins=3)\n",
+    "df['mpg_cut']= pd.cut(df.mpg ,bins=bins_range , labels=['저연비','보통','고연비'] )\n",
+    "df.mpg_qcut.value_counts()\n",
+    "print(f'계급별 구간 : {bins_range}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "526b23c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>저연비</th>\n",
+       "      <th>보통</th>\n",
+       "      <th>고연비</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>398 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     저연비   보통  고연비\n",
+       "0    1.0  0.0  0.0\n",
+       "1    1.0  0.0  0.0\n",
+       "2    1.0  0.0  0.0\n",
+       "3    1.0  0.0  0.0\n",
+       "4    1.0  0.0  0.0\n",
+       "..   ...  ...  ...\n",
+       "393  0.0  0.0  1.0\n",
+       "394  0.0  0.0  1.0\n",
+       "395  0.0  0.0  1.0\n",
+       "396  0.0  0.0  1.0\n",
+       "397  0.0  0.0  1.0\n",
+       "\n",
+       "[398 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.get_dummies(df.mpg_qcut,dtype = float) #dtype = float  문자열 -> 숫자 "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pandas",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pandas"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
