--- a/part5/5.15_time_series.ipynb
+++ b/part5/5.15_time_series.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8b2a13b7-33ea-4c44-94fa-da1115bbfae3",
    "metadata": {
     "tags": []
@@ -189,7 +189,7 @@
        "Timestamp('2023-12-25 00:00:00')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "a80a6813-b3db-41cd-95b1-af19a4e48153",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2022-12-12 00:00:00')"
+       "Timestamp('2023-12-25 00:00:00')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,9 +248,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pandas",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pandas"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -262,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
