피어슨과 스피어만 의 상관계수 ...

--- a/EDA/01.ipynb
+++ b/EDA/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "e2d4fdc4",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "4 2012-01-25  2012      1        2      수            0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "dedd0bcc",
    "metadata": {},
    "outputs": [
@@ -152,16 +152,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting holidays\n",
-      "  Downloading holidays-0.81-py3-none-any.whl.metadata (49 kB)\n",
+      "Requirement already satisfied: holidays in c:\\users\\playdata\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.81)\n",
       "Requirement already satisfied: python-dateutil in c:\\users\\playdata\\appdata\\roaming\\python\\python313\\site-packages (from holidays) (2.9.0.post0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\playdata\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil->holidays) (1.17.0)\n",
-      "Downloading holidays-0.81-py3-none-any.whl (1.3 MB)\n",
-      "   ---------------------------------------- 0.0/1.3 MB ? eta -:--:--\n",
-      "   -------- ------------------------------- 0.3/1.3 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 1.3/1.3 MB 3.8 MB/s  0:00:00\n",
-      "Installing collected packages: holidays\n",
-      "Successfully installed holidays-0.81\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -172,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "98ea9240",
    "metadata": {},
    "outputs": [
@@ -181,25 +174,25 @@
      "output_type": "stream",
      "text": [
       "2025-01-01:신정연휴\n",
-      "2025-01-29:설날\n",
+      "2025-01-27:임시공휴일\n",
       "2025-01-28:설날 전날\n",
+      "2025-01-29:설날\n",
       "2025-01-30:설날 다음날\n",
       "2025-03-01:삼일절\n",
+      "2025-03-03:삼일절 대체 휴일\n",
       "2025-05-05:부처님오신날; 어린이날\n",
+      "2025-05-06:부처님오신날 대체 휴일; 어린이날 대체 휴일\n",
+      "2025-06-03:대통령 선거일\n",
       "2025-06-06:현충일\n",
       "2025-08-15:광복절\n",
       "2025-10-03:개천절\n",
-      "2025-10-09:한글날\n",
-      "2025-10-06:추석\n",
       "2025-10-05:추석 전날\n",
+      "2025-10-06:추석\n",
       "2025-10-07:추석 다음날\n",
-      "2025-12-25:기독탄신일\n",
-      "2025-03-03:삼일절 대체 휴일\n",
-      "2025-05-06:부처님오신날 대체 휴일; 어린이날 대체 휴일\n",
       "2025-10-08:추석 대체 휴일\n",
-      "2025-01-27:임시공휴일\n",
-      "2025-06-03:대통령 선거일\n",
-      "2025-10-10:휴강\n"
+      "2025-10-09:한글날\n",
+      "2025-10-10:휴강\n",
+      "2025-12-25:기독탄신일\n"
      ]
     }
    ],
@@ -209,9 +202,9 @@
     "kr_holiday = holidays.KR(years = [2025])\n",
     "kr_holiday.append({ '2025-10-10' : '휴강' })\n",
     "\n",
-    "sorted(kr_holiday.items() , key=lambda x: x[0])#정렬이 안돼서 정렬하긔\n",
+    "kr_holiday = sorted(kr_holiday.items() , key=lambda x: x[0])#정렬이 안돼서 정렬하긔\n",
     "\n",
-    "for key , value in kr_holiday.items():\n",
+    "for key , value in kr_holiday:\n",
     "    print(f'{key}:{value}')\n",
     "\n",
     "# 2025년 10월 10일 학원 휴강이니까  추가해보자\n"
@@ -219,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b9ec6fa7",
    "metadata": {},
    "outputs": [
@@ -229,7 +222,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d0795302",
    "metadata": {},
    "outputs": [
@@ -250,7 +243,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e1493344",
+   "execution_count": 42,
+   "id": "fcce3a00",
    "metadata": {},
    "outputs": [
     {
@@ -291,6 +284,7 @@
        "      <th>month</th>\n",
        "      <th>day_int</th>\n",
        "      <th>df_str</th>\n",
+       "      <th>day_weekend</th>\n",
        "      <th>is_holiday</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -303,6 +297,7 @@
        "      <td>3</td>\n",
        "      <td>목</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -311,7 +306,8 @@
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>토</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -321,6 +317,7 @@
        "      <td>2</td>\n",
        "      <td>수</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -329,7 +326,8 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>일</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -339,33 +337,32 @@
        "      <td>2</td>\n",
        "      <td>수</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date  year  month  day_int df_str  is_holiday\n",
-       "0 2001-01-25  2001      1        3      목           0\n",
-       "1 2003-01-25  2003      1        5      토           0\n",
-       "2 2006-01-25  2006      1        2      수           0\n",
-       "3 2009-01-25  2009      1        6      일           0\n",
-       "4 2012-01-25  2012      1        2      수           0"
+       "        date  year  month  day_int df_str  day_weekend  is_holiday\n",
+       "0 2001-01-25  2001      1        3      목            0       False\n",
+       "1 2003-01-25  2003      1        5      토            1       False\n",
+       "2 2006-01-25  2006      1        2      수            0       False\n",
+       "3 2009-01-25  2009      1        6      일            1       False\n",
+       "4 2012-01-25  2012      1        2      수            0       False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#holiday : 1 , not : 0\n",
-    "\n",
-    "\n",
-    "\n",
-    "df['is_holiday'] = 0\n",
-    "df.head()\n",
-    "\n"
+    "df['date']\n",
+    "kr_holiday\n",
+    "df['date'].dt.date[0]\n",
+    "df['is_holiday'] = df['date'].dt.date.isin([a for a,b in kr_holiday])\n",
+    "df.head()"
    ]
   }
  ],
