--- a/part7/7.6_sanfrancisco_tree.ipynb
+++ b/part7/7.6_sanfrancisco_tree.ipynb
@@ -18,7 +18,7 @@
      "text": [
       "<>:4: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:4: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "C:\\Users\\playdata\\AppData\\Local\\Temp\\ipykernel_26840\\1301877931.py:4: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\playdata\\AppData\\Local\\Temp\\ipykernel_11380\\1301877931.py:4: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  df = pd.read_csv('D:\\pandas_main\\part7\\data\\San-Francisco-Crime.csv')\n"
      ]
     },
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b81905f6",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1022,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1e891e64",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
        "((702439, 24), (702439,))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,17 +1074,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "03859e87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8778071832571939, 0.24023119412334148)"
+       "(0.8778071832571939, 0.2395364728660099)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "172afeb8",
    "metadata": {},
    "outputs": [
@@ -1891,7 +1891,7 @@
        "             return_train_score=True)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "f2be7606",
    "metadata": {},
    "outputs": [
@@ -1929,10 +1929,10 @@
        "  'max_depth': 15,\n",
        "  'min_samples_leaf': 1,\n",
        "  'min_samples_split': 20},\n",
-       " np.float64(0.27907618966225367))"
+       " np.float64(0.27906337720031554))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "e5a7983d",
    "metadata": {},
    "outputs": [
@@ -2038,7 +2038,7 @@
        "4         0.237538               91  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "685abae1",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2088,7 @@
       "          15       0.00      0.00      0.00       468\n",
       "          16       0.33      0.68      0.45     34980\n",
       "          17       0.00      0.00      0.00       381\n",
-      "          18       0.14      0.01      0.02       245\n",
+      "          18       0.15      0.01      0.02       245\n",
       "          19       0.43      0.22      0.29      5198\n",
       "          20       0.22      0.14      0.17     18461\n",
       "          21       0.24      0.44      0.31     25236\n",
@@ -2138,11 +2138,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "637e3e5f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.01      0.08      0.01       303\n",
+      "           1       0.13      0.00      0.00     15375\n",
+      "           2       0.00      0.19      0.00        81\n",
+      "           3       0.00      0.05      0.00        58\n",
+      "           4       0.10      0.03      0.05      7351\n",
+      "           5       0.02      0.05      0.03       864\n",
+      "           6       0.01      0.34      0.03       454\n",
+      "           7       0.26      0.42      0.32     10794\n",
+      "           8       0.02      0.16      0.04       856\n",
+      "           9       0.01      0.23      0.01       233\n",
+      "          10       0.00      0.00      0.00        51\n",
+      "          11       0.00      0.20      0.01        98\n",
+      "          12       0.06      0.08      0.07      2122\n",
+      "          13       0.06      0.06      0.06      3336\n",
+      "          14       0.00      0.21      0.00        29\n",
+      "          15       0.00      0.02      0.01       468\n",
+      "          16       0.43      0.09      0.15     34980\n",
+      "          17       0.01      0.12      0.02       381\n",
+      "          18       0.02      0.35      0.04       245\n",
+      "          19       0.14      0.12      0.13      5198\n",
+      "          20       0.20      0.04      0.07     18461\n",
+      "          21       0.28      0.00      0.00     25236\n",
+      "          22       0.00      0.00      0.00         4\n",
+      "          23       0.20      0.74      0.32      1497\n",
+      "          24       0.01      0.30      0.03       628\n",
+      "          25       0.03      0.00      0.00      4600\n",
+      "          26       0.07      0.41      0.12       389\n",
+      "          27       0.02      0.02      0.02      1997\n",
+      "          28       0.02      0.08      0.03       878\n",
+      "          29       0.00      0.00      0.00        29\n",
+      "          30       0.01      0.04      0.01       908\n",
+      "          31       0.00      0.05      0.00       102\n",
+      "          32       0.06      0.00      0.01      6283\n",
+      "          33       0.00      0.00      0.00         1\n",
+      "          34       0.02      0.10      0.03      1465\n",
+      "          35       0.11      0.03      0.04      8945\n",
+      "          36       0.21      0.21      0.21     10756\n",
+      "          37       0.09      0.05      0.06      8443\n",
+      "          38       0.03      0.07      0.04      1711\n",
+      "\n",
+      "    accuracy                           0.09    175610\n",
+      "   macro avg       0.07      0.13      0.05    175610\n",
+      "weighted avg       0.21      0.09      0.09    175610\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 가중치 조절\n",
+    "# 클래스 불균형이 심한경우 소수의 클래스에 가중치를 부여해서 더 신경써서 지켜봐라\n",
+    "# 사이킷런 계열은 대부분 class_weight\n",
+    "best_params = grid_search.best_params_\n",
+    "best_params['class_weight'] = 'balanced'\n",
+    "balanced_tree = DecisionTreeClassifier(**best_params)\n",
+    "\n",
+    "balanced_tree.fit(x_train , y_train)\n",
+    "y_pred = balanced_tree.predict(x_test)\n",
+    "print(classification_report(y_test,y_pred))\n",
+    "\n",
+    "# 언발란스한 값이 많기떄문에 0.085 나옴"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8468699d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Category\n",
+       "4     139920\n",
+       "16    139920\n",
+       "7     139920\n",
+       "21    139920\n",
+       "36    139920\n",
+       "27    139920\n",
+       "37    139920\n",
+       "19    139920\n",
+       "1     139920\n",
+       "25    139920\n",
+       "23    139920\n",
+       "20    139920\n",
+       "35    139920\n",
+       "28    139920\n",
+       "24    139920\n",
+       "5     139920\n",
+       "34    139920\n",
+       "13    139920\n",
+       "38    139920\n",
+       "32    139920\n",
+       "26    139920\n",
+       "30    139920\n",
+       "12    139920\n",
+       "17    139920\n",
+       "8     139920\n",
+       "18    139920\n",
+       "31    139920\n",
+       "3     139920\n",
+       "0     139920\n",
+       "6     139920\n",
+       "15    139920\n",
+       "14    139920\n",
+       "9     139920\n",
+       "11    139920\n",
+       "10    139920\n",
+       "29    139920\n",
+       "2     139920\n",
+       "33    139920\n",
+       "22    139920\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 데이터 증강\n",
+    "# %pip install imbalanced-learn\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "smote =  SMOTE(random_state=42,k_neighbors=4)\n",
+    "# 훈련데이터에 대해서만 적용\n",
+    "x_train_over, y_train_over =  smote.fit_resample(x_train,y_train)\n",
+    "y_train_over.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eab13710",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18771710039291611"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# best_params 재 사용\n",
+    "over_tree = DecisionTreeClassifier(**best_params)\n",
+    "over_tree.fit(x_train_over , y_train_over)\n",
+    "over_tree.score(x_test , y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c00dd36",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Feature Engineering\n",
+    "\n",
+    "out = df.copy()\n",
+    "dt = pd.to_datetime(out.Dates)\n",
+    "out['year'] = dt.dt.year.astype(np.int16)\n",
+    "out['month'] = dt.dt.month.astype(np.int16)\n",
+    "out['day'] = dt.dt.day.astype(np.int16)\n",
+    "out['hour'] = dt.dt.hour.astype(np.int16)\n",
+    "out['minute'] = dt.dt.minute.astype(np.int16)\n",
+    "out['isWeekend'] = (dt.dt.dayofweek >=5).astype(np.int16)\n",
+    "\n",
+    "\n",
+    "# 시간정보 시계처럼 2차원 원 위에 표현  --> \n",
+    "# 1. 데이터를 각도로 변환하여 볼 수 있음 / 2 * np.pi * 시간 / 24.0  0~23시를 360도 원의 각도로 볂환.  6시 90도 12시 180도\n",
+    "# 2. 좌표계산(x , y) / cosign , sigin\n",
+    "\n",
+    "out['sign_hour'] = np.sin(2*np.pi*out.hour/24.0).astype(np.float32)\n",
+    "out['cosign_hour'] = np.cos(2*np.pi*out.hour/24.0).astype(np.float32)\n",
+    "np.unique(out.DayOfWeek)\n"
+   ]
   }
  ],
  "metadata": {
