--- a/part7/7.6_sanfrancisco_tree.ipynb
+++ b/part7/7.6_sanfrancisco_tree.ipynb
@@ -2326,8 +2326,16 @@
     "\n",
     "out['sign_hour'] = np.sin(2*np.pi*out.hour/24.0).astype(np.float32)\n",
     "out['cosign_hour'] = np.cos(2*np.pi*out.hour/24.0).astype(np.float32)\n",
-    "np.unique(out.DayOfWeek)\n"
+    "{\n",
+    "    'Monday':0,\n",
+    "}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743d4c4a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
