--- a/part7/7.6_sanfrancisco_tree.ipynb
+++ b/part7/7.6_sanfrancisco_tree.ipynb
@@ -2586,7 +2586,10 @@
    "id": "4810489b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 범죄유형별로 모델 만들기 ... one vs reset\n",
+    "# 하나의 모델을 정교화 - 모든 범죄유형을 한번에 분류 ... 불균형을 문제를 효과적"
+   ]
   }
  ],
  "metadata": {
