머신러닝 코드 추가 (큰 파일 제외)

--- a/part7/7.sgd.ipynb
+++ b/part7/7.sgd.ipynb
@@ -53,7 +53,7 @@
     "# y = Wx\n",
     "# 비용함수는 오차  (Wx - y)**2 / 2 수식을 미분 (Wx - y)*x\n",
     "\n",
-    "\n"
+    "# rhdqntlrks\n"
    ]
   }
  ],
