--- a/deep_learning/models_1024.ipynb
+++ b/deep_learning/models_1024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a4aed0af",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "13457b59",
    "metadata": {},
    "outputs": [
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "50a22eb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchvision import models"
+    "from torchvision import models # 이미 만들어진 유명한 딥러닝 모델들”을 불러오는 구문이야"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "14741d6b",
    "metadata": {},
    "outputs": [
@@ -289,18 +289,18 @@
        " 'wide_resnet50_2']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(models)"
+    "dir(models) # 지금 불러온 models 안에 뭐가 들어 있는지 보여줘!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e1d71c13",
    "metadata": {},
    "outputs": [
@@ -340,12 +340,18 @@
    ],
    "source": [
     "alexnet = models.AlexNet()\n",
-    "print(alexnet)"
+    "print(alexnet)\n",
+    "# 2012년 이미지 인식 혁명 일으킨 CNN 모델 -> CNN:이미지’를 보고 이해할 수 있도록 만들어진 딥러닝 모델\n",
+    "# CNN은 보통 이렇게 구성돼:\n",
+    "# Convolution 층 (Conv2d) → 특징을 추출\n",
+    "# ReLU 층 → 음수 없애고 활성화\n",
+    "# Pooling 층 (MaxPool2d) → 중요한 정보만 남기기\n",
+    "# Flatten → Fully Connected(Linear) → 분류 결과 출력"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "657a8d91",
    "metadata": {},
    "outputs": [],
@@ -356,7 +362,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "f09d5b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ResNet-101 : Residual Network(잔차 신경망)”의 줄임말\n",
+    "# 깊어질수록 원래는 학습이 어려워지는데, ResNet은 특별한 지름길로 이 문제를 해결\n",
+    "# 그 지름길의 이름은 (스킵커넥션 (Skip Connection , Residual Block))\n",
+    "# 이 지름길을 포함한 작은 묶음을 Residual Block(잔차 블록) 이라고 불러.\n",
+    "# Skip Connection - “완전히 새로운 걸 다” 가 아니라 기존 행동과의 차이만 배우게 하는 거야.\n",
+    "# W, x를 직접 다 학습하는 대신 𝑓(𝑥)f(x) = 잔차(residual)만 학습\n",
+    "# 초기x의 값이 지름길을 통해 뒤쪽 레이어까지 직접 전달\n",
+    "# 깊은 신경망은 역전파할 때 기울기(gradient) 가 점점 작아져서 소실되기 쉽다.\n",
+    "# 스킵 커넥션이 있으면, 역전파할 때 기울기가 지름길을 통해 ‘직접’ 초반층까지 전달된다.\n",
+    "# 레이어가 100층 넘으면 소실/폭발이 필연적 → ResNet은 이걸 해결 -> 더 깊은 층을 볼 수 있게 됨\n",
+    "# H(x) = F(x) + x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6620de68",
    "metadata": {},
    "outputs": [
@@ -704,50 +730,49 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ResNet-101\n",
-    "# 스킵커넥션 (Skip Connection , Residual Block)\n",
-    "# W , x 학습 대신에 f(x) 잔차(residual)(입력 x와의 차이)만 학습\n",
-    "# 초기x의 값이 지름길을 통해 뒤쪽 레이어까지 직접 전달... 층이 깊을수록 기울기가 소실 되는 문제\n",
-    "# 보통 레이어가 100층을 넘어가면 기울기가 소실되거나 폭발하는 현상이 필연적임. -> 이걸 해결해서 더 깊은 층을 볼 수 있게 됨\n",
-    "# H(x) = F(x) + x\n",
     "resnet = models.resnet101(pretrained = False)\n",
     "resnet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "09e646c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "# img = Image.open('')"
+    "# PIL : 파이썬에게 사진을 열고, 자르고, 저장하고, 바꾸는 능력을 주는 도구 세트"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "2916117e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alexnet.eval() 모델을 평가할때 평가모드로 전환\n",
-    "# 모델 내의 배치를 정규화하고 층, 드랍아웃층이 평가모드로 작동\n",
-    "# 배치정규화 : 학습에는 현재 배치의 평균과 분산 사용 평가모드가 되면 학습 과정에 전체에서 누적된 평균 / 분산\n",
-    "# 드랍아웃 : 학습시에는 랜덤하게 뉴런을 끄지만 , 평가모드로 전환되면 모든 뉴런을 사용\n",
+    "# alexnet.eval() 모델을 평가할때 평가모드로 전환하는 것 - 이제 공부 그만, 시험 보자!\n",
+    "# PyTorch에서는 모델을 두 가지 모드로 나눠서 동작시켜\n",
+    "# 1) 학습 모드 (training mode) - model.train() / 2) 평가 모드 (evaluation mode) - model.eval()\n",
+    "# 배치정규화 : 훈련할 때의 경험(통계)”을 그대로 사용해서 예측을 안정화시키는 거야.\n",
+    "# 학습을 안정적으로” 하게 도와주는 층으로 훈련할 때는 각 미니배치(batch) 마다\n",
+    "# 평균(mean)과 분산(variance)을 즉석 계산해서 사용해\n",
+    "# 하지만 평가할 때는,“전체 데이터에서 평균적으로 어떤 값이었는지”를 사용해야 안정적이지!\n",
+    "# 드랍아웃 : 이건 학습 중에 과적합(외워버리는 문제) 을 막기 위한 방법\n",
+    "# 학습시에는 랜덤하게 뉴런을 끄지만 , 평가모드로 전환되면 모든 뉴런을 사용\n",
     "# alexnet(x_test) : 예측하는것. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4d1e4989",
    "metadata": {},
    "outputs": [],
@@ -763,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a4e48e4d",
    "metadata": {},
    "outputs": [
@@ -788,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b2764a73",
    "metadata": {},
    "outputs": [
@@ -808,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5a2c753a",
    "metadata": {},
    "outputs": [
@@ -828,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4c2875e3",
    "metadata": {},
    "outputs": [
@@ -847,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e75071ec",
    "metadata": {},
    "outputs": [
@@ -857,7 +882,7 @@
        "torch.Size([1, 32, 28, 28])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3007cc54",
    "metadata": {},
    "outputs": [
@@ -890,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "1a5ffd4b",
    "metadata": {},
    "outputs": [
@@ -909,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d0bb0df6",
    "metadata": {},
    "outputs": [
@@ -928,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "fa5fedf5",
    "metadata": {},
    "outputs": [
@@ -938,7 +963,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,18 +974,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "617b9baa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 8.9279e+30,  1.6430e-01,  1.6430e-01,  ..., -9.8610e-03,\n",
-       "         -9.8610e-03, -9.8610e-03]], grad_fn=<ViewBackward0>)"
+       "tensor([[ 6.4329, -0.0564, -0.0564,  ..., -0.0713, -0.0713, -0.0622]],\n",
+       "       grad_fn=<ViewBackward0>)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "aff70c08",
    "metadata": {},
    "outputs": [
@@ -990,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "86be1942",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "b9301f23",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "434249b8",
    "metadata": {},
    "outputs": [],
@@ -1043,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "17027f1e",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "dca8c9d3",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "1f932ed2",
    "metadata": {},
    "outputs": [],
@@ -1121,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "44a18bd9",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1156,7 @@
        "938"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "35eb4765",
    "metadata": {},
    "outputs": [
@@ -1150,11 +1175,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch : 1 / 5 , loss : 0.4355\n",
-      "Epoch : 2 / 5 , loss : 0.2813\n",
-      "Epoch : 3 / 5 , loss : 0.2354\n",
-      "Epoch : 4 / 5 , loss : 0.2049\n",
-      "Epoch : 5 / 5 , loss : 0.1787\n"
+      "Epoch : 1 / 5 , loss : 0.4379\n",
+      "Epoch : 2 / 5 , loss : 0.2801\n",
+      "Epoch : 3 / 5 , loss : 0.2351\n",
+      "Epoch : 4 / 5 , loss : 0.2012\n",
+      "Epoch : 5 / 5 , loss : 0.1762\n"
      ]
     }
    ],
@@ -1181,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "98466352",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy : 0.9099\n"
+      "test accuracy : 0.9154\n"
      ]
     }
    ],
@@ -1210,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "d22b0b9e",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "2822d966",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1259,7 @@
        " tensor([0, 7, 7, 8, 5]))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "1d00722b",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "d144fc23",
    "metadata": {},
    "outputs": [
@@ -1308,7 +1333,7 @@
        "array([0.4914008 , 0.482159  , 0.44653094], dtype=float32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "056aa96f",
    "metadata": {},
    "outputs": [],
@@ -1358,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "72496fbe",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1393,7 @@
        "3"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "4a7ce52b",
    "metadata": {},
    "outputs": [
@@ -1399,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "6d02e375",
    "metadata": {},
    "outputs": [
@@ -1409,7 +1434,7 @@
        "torch.Size([64, 3, 32, 32])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "d39e4425",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "efb3699d",
    "metadata": {},
    "outputs": [
@@ -1457,8 +1482,8 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     17\u001b[39m model = CNN()\n\u001b[32m     18\u001b[39m model\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m cnn_cifar10_model = \u001b[43mCNN_CIFAR10\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m device = torch.device(\u001b[33m'\u001b[39m\u001b[33mcuda\u001b[39m\u001b[33m'\u001b[39m  \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mcpu\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     22\u001b[39m model.to(device)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mCNN_CIFAR10.__init__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mCNN\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m()  \u001b[38;5;66;03m# 64, 3, 32, 32\u001b[39;00m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mself\u001b[39m.conv1 = nn.Conv2d(\u001b[32m3\u001b[39m,\u001b[32m32\u001b[39m,\u001b[32m3\u001b[39m,padding=\u001b[32m1\u001b[39m)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mself\u001b[39m.conv2 = nn.Conv2d(\u001b[32m32\u001b[39m,\u001b[32m64\u001b[39m,\u001b[32m3\u001b[39m,padding=\u001b[32m1\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     17\u001b[39m model = CNN()\n\u001b[32m     18\u001b[39m model\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m cnn_cifar10_model = \u001b[43mCNN_CIFAR10\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m device = torch.device(\u001b[33m'\u001b[39m\u001b[33mcuda\u001b[39m\u001b[33m'\u001b[39m  \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mcpu\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     22\u001b[39m model.to(device)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mCNN_CIFAR10.__init__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mCNN\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m()  \u001b[38;5;66;03m# 64, 3, 32, 32\u001b[39;00m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mself\u001b[39m.conv1 = nn.Conv2d(\u001b[32m3\u001b[39m,\u001b[32m32\u001b[39m,\u001b[32m3\u001b[39m,padding=\u001b[32m1\u001b[39m)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mself\u001b[39m.conv2 = nn.Conv2d(\u001b[32m32\u001b[39m,\u001b[32m64\u001b[39m,\u001b[32m3\u001b[39m,padding=\u001b[32m1\u001b[39m)\n",
       "\u001b[31mTypeError\u001b[39m: super(type, obj): obj (instance of CNN_CIFAR10) is not an instance or subtype of type (CNN)."
      ]
     }
